--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
+    "prettier": "2.2.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
     "typescript": "~4.1.5",
